# niletel-rag-assistant

./: .env.example  .gitignore  EXTRAS.md  README.md  REFLECTION.md  pyproject.toml
.streamlit/: config.toml
data/: 5g_throttling_troubleshooting.md  audit_and_compliance_logging.md  billing_dispute_procedure.md  common_ont_hardware_faults.md  contract_cancellation_process.md  corporate_customer_handling.md  crm_oss_integration_guide.md  customer_satisfaction_survey_handling.md  data_privacy_policy.md  eid_back_to_school_offers_2026.md  escalation_matrix.md  faq_5g_not_connecting.md  faq_escalation.md  faq_fiber_slow_speed.md  faq_new_offer_details.md  faq_refund_request.md  fiber_activation_policy_2026.md  field_engineer_dispatch.md  issuing_goodwill_credit.md (Supervisor-only).md  kpi_dashboard_guide.md  mansoura_delta_fiber_issues.md  network_outage_template.md  nile_tel_mobile_app_troubleshooting.md  ntra_regulations_summary.md  peak_hour_management.md  prepaid_to_postpaid_migration.md  ramadan_postpaid_offers_2026.md  roaming_charges_guide.md  sla_vip_golden_customers.md  supervisor_daily_review_checklist.md  supported_hardware.md  telecom_glossary.md  ticket_categories_list.md  ticket_priority_guidelines.md  vip_retention_script.md
scripts/: preprocess_data.py
src/app/: main.py  schemas.py
src/app/core/: config.py  logging.py  pii.py
src/app/integrations/: n8n.py
src/app/llm/: llm_client.py  prompts.py
src/app/rag/: bm25_index.py  chunking.py  dense_index.py  embeddings.py  fusion.py  pipeline.py  reranker.py
ui/: streamlit_app.py
(+1 files in other folders)
