[project]
name = "niletel-rag-assistant"
version = "0.1.0"
description = "Bilingual telecom support RAG assistant with hybrid retrieval"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic-settings",
    "groq",
    "sentence-transformers",
    "faiss-cpu",
    "rank-bm25",
    "streamlit",
    "httpx",
    "python-dotenv",
    "google-genai>=2.3.0",
    "openai>=2.36.0",
]

[dependency-groups]
dev = [
    "ruff",
    "ipython",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]
